servicemesh/workspace/base/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: entrypoint-gateway
  namespace: workspace
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - "*" # need to change
      port:
        name: http
        protocol: HTTP
        number: 80
